--- a/public/app/common/templates/list-items.jade
+++ b/public/app/common/templates/list-items.jade
@@ -6,7 +6,7 @@ h1.well.text-center(ng-class="cssClass") {{ title }}
     .form-group
       select.form-control(ng-model="searchOpt", ng-options="item.value as item.text for item in searchOptions")
 
-button.btn.btn-default(ng-repeat="itemButton in buttons", ng-click="itemButton.func(currentItem)", ng-show="identity.isAuthorized(itemButton.auth)")
+button.btn.btn-default(ng-repeat="itemButton in buttons", ng-click="itemButton.func()", ng-show="identity.isAuthorized(itemButton.auth)")
   a.link-alias.black(href="{{ itemButton.url }}") {{ itemButton.text }}
 br
 br
