--- a/public/app/common/templates/item-details.jade
+++ b/public/app/common/templates/item-details.jade
@@ -1,4 +1,4 @@
-a.btn.btn-tabs.btn-sm(href="{{ backUrl }}") << Back to {{ backUrlText }}
+a.btn.btn-sm(href="{{ backUrl }}") << Back to {{ backUrlText }}
 h1.form-inline {{ heading }}
 .btn-tabs
   button.btn.btn-default(ng-repeat="itemButton in buttons", ng-click="itemButton.func(currentItem)", ng-show="identity.isAuthorized(itemButton.auth)")
