improvements to purchase order screen, deleted unused line in routes.js

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -194,3 +194,6 @@ $inventory-text-color = white
     -webkit-border-radius 6px 0 6px 6px
     -moz-border-radius 6px 0 6px 6px
     border-radius 6px 0 6px 6px
+
+.small
+  max-width 20px
