--- a/public/app/screens/inbound/new-purchase-order.jade
+++ b/public/app/screens/inbound/new-purchase-order.jade
@@ -1,46 +1,40 @@
 .container
   h1.well.inbound-header.text-center New Purchase Order
-  .col-md-6
-    .well
-      form.form-horizontal(name="purchaseOrderForm")
-        fieldset
-          legend.text-center Product
-          .form-group
-            label.col-md-5.control-label(for="name") Product:
-            .col-md-7
-              label.control-label(ng-model="name") {{ name }}
-          .form-group
-            label.col-md-5.control-label(for="upc") UPC:
-            .col-md-7
-              label.control-label(ng-model="upc") {{ upc }}
-          .form-group
-            label.col-md-5.control-label(for="product_id") Product ID:
-            .col-md-7
-              label.control-label(ng-model="product_id") {{ product_id }}
-          .form-group
-            label.col-md-5.control-label(for="price") Unit Price:
-            .col-md-7
-              label.control-label(ng-model="price") {{ price }}
-          .form-group
-            label.col-md-5.control-label(for="manufacturer") Manufacturer:
-            .col-md-7
-              label.control-label(ng-model="manufacturer") {{ manufacturer }}
-          .form-group
-            label.col-md-5.control-label(for="quantity") Quantity *
-            .col-md-7
-              input.form-control(name="quantity", type="text", placeholder="Product Quantity", ng-model="quantity", required)
-          .form-group
-            .col-md-10.col-md-offset-2
-              .pull-right
-                button.btn.btn-primary(ng-click="showPurchaseOrder()", ng-disabled="purchaseOrderForm.$invalid || purchaseOrderForm2.$invalid") Preview Order
-                | &nbsp;
-                a.btn.btn-default(ng-click="cancel()") Cancel
-  .col-md-6
-    .well
-      form.form-horizontal(name="purchaseOrderForm2")
-        fieldset
-          legend.text-center (Continued)
-          .form-group
-            label.col-md-3.control-label
-            .col-md-9
-              input.form-control
+  button.btn.btn-default(ng-show="checkbox === false") Delete Selected
+  button.btn.btn-danger(ng-show="checkbox === true") Delete Selected
+  button.btn.btn-default Add Product
+  br
+  br
+  form(name="purchaseOrderForm")
+    table.table.table-hover.table-striped.table-condensed
+      thead
+        tr.table-header-bar
+          th.small √
+          th Product
+          th UPC
+          th Product ID
+          th Unit Price
+          th Manufacturer
+          th Quantity
+          th Line Total
+
+      tbody
+        tr(ng-repeat="product in productsToOrder")
+          td
+            input(type="checkbox", ng-model="checkbox")
+          td {{ product.name }}
+          td {{ product.upc }}
+          td {{ product.product_id }}
+          td {{ product.price }}
+          td {{ product.manufacturer }}
+          td
+            input(type="text", value="{{quantityToOrder}}", ng-model="quant", ng-change="recalculate(product.price, quant)", required)
+          td {{ totalPerProduct | currency}}
+  .form-group
+    .col-md-10.col-md-offset-2
+      .pull-right
+        a.btn.btn-primary(href="/", ng-disabled="purchaseOrderForm.$invalid") Place Order
+        | &nbsp;
+        a.btn.btn-default(ng-click="cancel()") Discard
+        //TODO: link up delete checkbox with the delete button
+        //TODO: make the place order button work
