--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -1,5 +1,6 @@
 body
   padding-top 70px
+  margin 0
 .navbar
   height 70px
 .navbar-nav a
@@ -197,3 +198,16 @@ $inventory-text-color = white
 
 .small
   max-width 20px
+.overlay
+  position absolute
+  height 400px
+  width 600px
+  left 33%
+  .container
+    border 2px solid black
+    overflow auto
+    height 100%
+    width 100%
+    background white
+  li
+    list-style none
