'add product' overlay in purchase order screen

--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -199,10 +199,11 @@ $inventory-text-color = white
 .small
   max-width 20px
 .overlay
-  position absolute
+  position relative
   height 400px
   width 600px
-  left 33%
+  margin-left auto
+  margin-right auto
   .container
     border 2px solid black
     overflow auto
