--- a/public/css/site.css
+++ b/public/css/site.css
@@ -196,10 +196,11 @@ a.link-alias-white {
   max-width: 20px;
 }
 .overlay {
-  position: absolute;
+  position: relative;
   height: 400px;
   width: 600px;
-  left: 33%;
+  margin-left: auto;
+  margin-right: auto;
 }
 .overlay .container {
   border: 2px solid #000;
