'add product' overlay in purchase order screen

--- a/public/app/screens/inbound/new-purchase-order.jade
+++ b/public/app/screens/inbound/new-purchase-order.jade
@@ -40,7 +40,7 @@
         a.btn.btn-default(ng-click="cancel()") Discard
 
   .overlay(ng-show="isAdding()")
-    button.input-group-lg.btn.btn-warning Close
+    button.btn.btn-warning Close
     .container.text-center
       h1.well.inbound-header Pick a product
       hr
