--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -200,15 +200,16 @@ $inventory-text-color = white
   max-width 20px
 .overlay
   position relative
-  height 400px
-  width 600px
-  margin-left auto
-  margin-right auto
+  button
+    margin-left 25%
   .container
+    position absolute
     border 2px solid black
     overflow auto
-    height 100%
-    width 100%
+    height 400px
+    width 600px
+    left 50%
+    margin-left -25%
     background white
   li
     list-style none
