--- a/public/css/site.css
+++ b/public/css/site.css
@@ -197,16 +197,18 @@ a.link-alias-white {
 }
 .overlay {
   position: relative;
-  height: 400px;
-  width: 600px;
-  margin-left: auto;
-  margin-right: auto;
+}
+.overlay button {
+  margin-left: 25%;
 }
 .overlay .container {
+  position: absolute;
   border: 2px solid #000;
   overflow: auto;
-  height: 100%;
-  width: 100%;
+  height: 400px;
+  width: 600px;
+  left: 50%;
+  margin-left: -25%;
   background: #fff;
 }
 .overlay li {
