--- a/public/app/screens/inbound/new-purchase-order.jade
+++ b/public/app/screens/inbound/new-purchase-order.jade
@@ -2,7 +2,7 @@
   h1.well.inbound-header.text-center New Purchase Order
   button.btn.btn-default(ng-show="checkbox === false") Delete Selected
   button.btn.btn-danger(ng-show="checkbox === true") Delete Selected
-  button.btn.btn-default(ng-click="addProduct()") Add Product
+  button.btn.btn-default(ng-click="toggleIsAdding()") Add Product
   br
   br
 
@@ -40,11 +40,12 @@
         a.btn.btn-default(ng-click="cancel()") Discard
 
   .overlay(ng-show="isAdding()")
-    button.btn.btn-warning Close
+    button.btn.btn-warning(ng-click="toggleIsAdding()") Close
     .container.text-center
       h1.well.inbound-header Pick a product
       hr
       ul
-        li(ng-repeat="product in products") {{ product.name }}
+        li(ng-repeat="product in products")
+          a(ng-click="addProduct(product)") {{ product.name }}
        //TODO: link up delete checkbox with the delete button
         //TODO: make the place order button work
