--- a/public/css/site.css
+++ b/public/css/site.css
@@ -196,19 +196,20 @@ a.link-alias-white {
   max-width: 20px;
 }
 .overlay {
-  position: relative;
+  position: absolute;
+  top: 20%;
 }
 .overlay button {
-  margin-left: 25%;
+  margin-left: 50%;
 }
 .overlay .container {
-  position: absolute;
+  position: relative;
   border: 2px solid #000;
   overflow: auto;
   height: 400px;
   width: 600px;
-  left: 50%;
-  margin-left: -25%;
+  margin-left: 50%;
+  margin-right: 50%;
   background: #fff;
 }
 .overlay li {
