--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -199,17 +199,18 @@ $inventory-text-color = white
 .small
   max-width 20px
 .overlay
-  position relative
+  position absolute
+  top 20%
   button
-    margin-left 25%
+    margin-left 50%
   .container
-    position absolute
+    position relative
     border 2px solid black
     overflow auto
     height 400px
     width 600px
-    left 50%
-    margin-left -25%
+    margin-left 50%
+    margin-right 50%
     background white
   li
     list-style none
