--- a/public/app/screens/inbound/new-purchase-order.jade
+++ b/public/app/screens/inbound/new-purchase-order.jade
@@ -1,8 +1,9 @@
 .container
   h1.well.inbound-header.text-center New Purchase Order
-  button.btn.btn-default(ng-show="checkbox === false") Delete Selected
-  button.btn.btn-danger(ng-show="checkbox === true") Delete Selected
-  button.btn.btn-default(ng-click="toggleIsAdding()") Add Product
+  .btn-tabs
+    button.btn.btn-default(ng-show="checkbox === false") Delete Selected
+    button.btn.btn-danger(ng-show="checkbox === true") Delete Selected
+    button.btn.btn-default(ng-click="toggleIsAdding()") Add Product
   br
   br
 
@@ -29,12 +30,15 @@
           td {{ product.price }}
           td {{ product.manufacturer }}
           td
-            input(type="text", ng-model="quant", ng-change="recalculate(product.price, quant);", required)
-          td {{ totalPerProduct | currency}}
+            input(type="text", ng-model="quant", ng-change="recalculate(product, quant);", required)
+          td {{ product.totalPerLine | currency}}
 
   .form-group
     .col-md-10.col-md-offset-2
       .pull-right
+        .form-group
+          label.control-label(for="total") Total
+            input.form-control(name="total", type="text", ng-model="total | currency", required)
         a.btn.btn-primary(href="/", ng-disabled="purchaseOrderForm.$invalid", ng-click="placeOrder(productsToOrder)") Place Order
         | &nbsp;
         a.btn.btn-default(ng-click="cancel()") Discard
@@ -42,7 +46,7 @@
   .overlay(ng-show="isAdding()")
     button.btn.btn-warning(ng-click="toggleIsAdding()") Close
     .container.text-center
-      h1.well.inbound-header Pick a product
+      h1.inbound-header Pick a product
       hr
       ul
         li(ng-repeat="product in products")
