--- a/public/app/screens/inbound/new-purchase-order.jade
+++ b/public/app/screens/inbound/new-purchase-order.jade
@@ -1,10 +1,8 @@
 .container
   h1.well.inbound-header.text-center New Purchase Order
   .btn-tabs
-    button.btn.btn-default(ng-show="!isChecked()") Delete Selected
-    button.btn.btn-danger(ng-show="isChecked()") Delete Selected
     button.btn.btn-default(ng-click="toggleIsAdding()") Add Product
-  br
+    button.btn.btn-danger(ng-show="isChecked()", ng-click="deleteCheckedLines()") Delete Selected
   br
 
   form(name="purchaseOrderForm")
