--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -25,6 +25,8 @@ script(type="text/javascript", src="/app/account/mvProfileCtrl.js")
 script(type="text/javascript", src="/app/common/mvNotifier.js")
 script(type="text/javascript", src="/app/common/directives/mvListItemsDirective.js")
 script(type="text/javascript", src="/app/common/directives/mvItemDetailsDirective.js")
+script(type="text/javascript", src="/app/common/directives/mvSelectOnClick.js")
+script(type="text/javascript", src="/app/common/directives/mvValidation.js")
 script(type="text/javascript", src="/app/admin/user/mvUserListCtrl.js")
 script(type="text/javascript", src="/app/admin/user/mvUserDetailCtrl.js")
 script(type="text/javascript", src="/app/admin/user/mvCachedUsers.js")
