adds orders, persists on database with all necessary data, tracks # of orders on main page

--- a/public/app/main/main-inbound.jade
+++ b/public/app/main/main-inbound.jade
@@ -5,7 +5,7 @@
       .text-center
         .row
           .col-md-6.text-right Open Orders:
-          .col-md-6.text-left {{ orders }}
+          .col-md-6.text-left {{ inboundOrdersAmount }}
         .row --
         .row --
         .col-md-12
