--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -37,6 +37,9 @@ script(type="text/javascript", src="/app/admin/product/mvProductAddCtrl.js")
 script(type="text/javascript", src="/app/admin/product/mvProductsListCtrl.js")
 script(type="text/javascript", src="/app/screens/inbound/mvInboundScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/inbound/mvNewPurchaseOrderCtrl.js")
+script(type="text/javascript", src="/app/screens/inbound/mvInboundOrder.js")
+script(type="text/javascript", src="/app/screens/inbound/mvInboundOrderAdmin.js")
+script(type="text/javascript", src="/app/screens/inbound/mvCachedInboundOrder.js")
 script(type="text/javascript", src="/app/screens/inventory/mvInventoryScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/locations/mvLocationsScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/locations/mvLocation.js")
