--- a/public/app/screens/inbound/inbound.jade
+++ b/public/app/screens/inbound/inbound.jade
@@ -1,2 +1,20 @@
 .container
   list-items
+  table.table.table-hover.table-striped.table-condensed
+    thead
+      tr.table-header-bar
+        th.click(ng-show="sortOrder != 'name' && sortOrder != '-name'", ng-click="sortOrder = 'name'") Name
+        th.click(ng-show="sortOrder == 'name' || sortOrder == '-name'", ng-click="reverseOrder(sortOrder)") Name
+          b.caret(ng-show="sortOrder == 'name'")
+          b.dropup(ng-show="sortOrder == '-name'")
+            b.caret
+    tbody
+      tr(ng-repeat="product in products | filter:search | orderBy:sortOrder")
+        td
+          a(href="/admin/product/{{product._id}}") {{ product.name }}
+        td {{ product.description }}
+        td {{ product.upc }}
+        td {{ product.product_id }}
+        td {{ product.quantity }}
+        td {{ product.price | currency:"$":2}}
+        td {{ product.manufacturer }}
