--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -35,6 +35,7 @@ script(type="text/javascript", src="/app/admin/product/mvProductDetailCtrl.js")
 script(type="text/javascript", src="/app/admin/product/mvProductAdmin.js")
 script(type="text/javascript", src="/app/admin/product/mvProductAddCtrl.js")
 script(type="text/javascript", src="/app/admin/product/mvProductsListCtrl.js")
+script(type="text/javascript", src="/app/admin/inbound/mvInboundDetailCtrl.js")
 script(type="text/javascript", src="/app/screens/inbound/mvInboundScreenCtrl.js")
 script(type="text/javascript", src="/app/screens/inbound/mvNewPurchaseOrderCtrl.js")
 script(type="text/javascript", src="/app/screens/inbound/mvInboundOrder.js")
