--- a/public/app/screens/screens.jade
+++ b/public/app/screens/screens.jade
@@ -11,5 +11,7 @@ ul.dropdown-menu
     ul.dropdown-menu
       li
         a(href="/screens/inbound/order") Purchase Order
+      li
+        a(href="/screens/inbound/receive") Receive Product
   li
     a(href="/screens/outbound") Outbound
