--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -211,6 +211,7 @@ $inventory-text-color = white
     width 600px
     margin-left 50%
     margin-right 50%
-    background white
   li
     list-style none
+.no-overflow
+  overflow hidden
