--- a/public/app/account/profile.jade
+++ b/public/app/account/profile.jade
@@ -6,7 +6,7 @@
         .form-group
           label.col-md-2.control-label(for="username") Username
           .col-md-10
-            input.form-control(name="username", type="username", placeholder="Username", ng-model="username", required)
+            input.form-control(name="username", type="text", placeholder="Username", ng-model="username", required)
         .form-group
           label.col-md-2.control-label(for="fname") First Name
           .col-md-10
