--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -6,6 +6,9 @@ script(type="text/javascript", src="/vendor/angular-resource/angular-resource.js
 script(type="text/javascript", src="/vendor/angular-route/angular-route.js")
 script(type="text/javascript", src="/vendor/alertify.js/dist/js/ngAlertify.js")
 script(type="text/javascript", src="/app/app.js")
+script(type="text/javascript", src="/app/load/mvCachedLoad.js")
+script(type="text/javascript", src="/app/load/mvLoad.js")
+script(type="text/javascript", src="/app/load/mvLoadAdmin.js")
 script(type="text/javascript", src="/app/main/controllers/mvMainCtrl.js")
 script(type="text/javascript", src="/app/main/controllers/mvMainInboundCtrl.js")
 script(type="text/javascript", src="/app/main/controllers/mvMainInventoryCtrl.js")
