adds quantity received to product... does not automatically reload client products yet.

--- a/public/app/screens/inbound/new-purchase-order.jade
+++ b/public/app/screens/inbound/new-purchase-order.jade
@@ -25,7 +25,7 @@
           td {{ product.name }}
           td {{ product.upc }}
           td {{ product.product_id }}
-          td {{ product.price }}
+          td {{ product.price | currency}}
           td {{ product.manufacturer }}
           td
             input(type="text", ng-model="quant", ng-change="recalculate(product, quant)", greater-than-zero, select-on-click, required)
