fix to products.location[0].name bug

--- a/public/app/screens/inbound/new-purchase-order.jade
+++ b/public/app/screens/inbound/new-purchase-order.jade
@@ -47,4 +47,4 @@
       hr
       ul
         li(ng-repeat="product in products")
-          a(ng-click="addProduct(product)") {{ product.name }}
+          a.click(ng-click="addProduct(product)") {{ product.name }}
