--- a/server/includes/layout.jade
+++ b/server/includes/layout.jade
@@ -3,9 +3,12 @@ html
   head
     title IMS By David Cole
     link(href="favicon.ico", rel="shortcut icon", type="image/x-icon")
+    link(rel="stylesheet", href="/css/reset.css")
     link(rel="stylesheet", href="/css/bootstrap.css")
     link(rel="stylesheet", href="/vendor/toastr/toastr.css")
     link(rel="stylesheet", href="/css/site.css")
+    //link(rel="stylesheet", href="/css/diagnostic.css")
+    //link(rel="stylesheet", href="/css/diagnostic-ie7.css")
     base(href="/")
   body(ng-app='app')
     include currentUser
