--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -7,12 +7,6 @@ body
   margin-top 8px
 .navbar-form a
   margin-top 0px
-footer
-  padding-left 15px
-  padding-right 15px
-  p
-    border-top 1px solid #d7e0e2
-
 .navbar-form
   .form-group
     margin-left 10px
@@ -20,6 +14,12 @@ footer
   button
     margin-left 10px
     margin-top 8px
+
+footer
+  padding-left 15px
+  padding-right 15px
+  p
+    border-top 1px solid #d7e0e2
 
 .alertify .dialog nav button:not(.btn):not(.pure-button):not(.md-button):not(.mdl-button).cancel
     background-color red
@@ -149,6 +149,25 @@ $inventory-text-color = white
     min-width 120px
     border 1px solid #ffffff
 
+.small
+  max-width 20px
+.overlay
+  position absolute
+  top 25%
+  button
+    margin-left 50%
+  .container
+    position relative
+    border 2px solid black
+    overflow auto
+    height 400px
+    width 600px
+    margin-left 50%
+    margin-right 50%
+  li
+    list-style none
+.no-overflow
+  overflow hidden
 
 //submenu
 .dropdown-submenu
@@ -195,23 +214,4 @@ $inventory-text-color = white
     -webkit-border-radius 6px 0 6px 6px
     -moz-border-radius 6px 0 6px 6px
     border-radius 6px 0 6px 6px
-
-.small
-  max-width 20px
-.overlay
-  position absolute
-  top 25%
-  button
-    margin-left 50%
-  .container
-    position relative
-    border 2px solid black
-    overflow auto
-    height 400px
-    width 600px
-    margin-left 50%
-    margin-right 50%
-  li
-    list-style none
-.no-overflow
-  overflow hidden
+//end submenu
