--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1,9 +1,11 @@
 body {
-  padding-top: 70px;
+  padding-top: 120px;
+  background-color: #fff;
   margin: 0;
 }
 .navbar {
   height: 70px;
+  margin-bottom: 20px;
 }
 .navbar-nav a {
   margin-top: 8px;
@@ -47,7 +49,23 @@ a.link-alias-white {
   width: 120px;
 }
 .btn-tabs button {
-  margin-right: 5px;
+  position: relative;
+  z-index: 99;
+  top: -33px;
+  border-top: none;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  background-color: #f5f5f5;
+  border-color: #f5f5f5;
+}
+.btn-tabs button.active {
+  border-color: #eee;
+  background-color: #eee;
+}
+.btn-tabs button:hover {
+  background-color: #d4d4d4;
 }
 .vertical-center {
   vertical-align: middle;
@@ -58,9 +76,14 @@ a.link-alias-white {
 .margin-left-med {
   margin-left: 10px;
 }
+.container {
+  width: 80%;
+}
 .content-container {
-  margin: 20px;
-  padding-top: 10px;
+  width: 80%;
+  background-color: #eee;
+  margin-left: auto;
+  margin-right: auto;
 }
 .panel-primary .product {
   background-color: #000;
