--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -1,8 +1,10 @@
 body
-  padding-top 70px
+  padding-top 120px
+  background-color white
   margin 0
 .navbar
   height 70px
+  margin-bottom 20px
 .navbar-nav a
   margin-top 8px
 .navbar-form a
@@ -39,9 +41,24 @@ a.link-alias-white
 .product
   button
     width 120px
+
 .btn-tabs
   button
-    margin-right 5px
+    position relative
+    z-index 99
+    top -33px
+    border-top none
+    border-top-right-radius 20px
+    border-top-left-radius 5px
+    border-bottom-left-radius 0px
+    border-bottom-right-radius 0px
+    background-color #f5f5f5
+    border-color #f5f5f5
+  button.active
+    border-color #eeeeee
+    background-color #eeeeee
+  button:hover
+    background-color #d4d4d4
 
 .vertical-center
   vertical-align middle
@@ -52,9 +69,16 @@ a.link-alias-white
 .margin-left-med
   margin-left 10px
 
+.container
+  width 80%
+
 .content-container
-  margin 20px
-  padding-top 10px
+  width 80%
+  background-color #eeeeee
+  margin-left auto
+  margin-right auto
+  //margin 20px
+  //padding-top 10px
   //background-color #c3c3c3
 
 $product-main-color = #000000
