--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -28,6 +28,7 @@ script(type="text/javascript", src="/app/account/mvProfileCtrl.js")
 script(type="text/javascript", src="/app/common/mvNotifier.js")
 script(type="text/javascript", src="/app/common/directives/mvListItemsDirective.js")
 script(type="text/javascript", src="/app/common/directives/mvItemDetailsDirective.js")
+script(type="text/javascript", src="/app/common/directives/mvButtonTabsDirective.js")
 script(type="text/javascript", src="/app/common/directives/mvSelectOnClick.js")
 script(type="text/javascript", src="/app/common/directives/mvValidation.js")
 script(type="text/javascript", src="/app/admin/user/mvUserListCtrl.js")
