buttons 'tabbed' in product details page

--- a/public/app/admin/product/product-details.jade
+++ b/public/app/admin/product/product-details.jade
@@ -1,4 +1,5 @@
 .container
+  button-tabs
   item-details
   h4(ng-repeat="(key, val) in currentItem")
     p(ng-show="key !== 'locations'") {{ key }}: {{ val }}
