--- a/public/app/common/templates/button-tabs.jade
+++ b/public/app/common/templates/button-tabs.jade
@@ -1,3 +1,3 @@
 .btn-tabs
-  button.btn.btn-default(ng-repeat="itemButton in buttons", ng-click="itemButton.click()", ng-show="identity.isAuthorized(itemButton.auth)", ng-class="{active: itemButton.isCurrent()}")
+  button.btn.btn-default(ng-repeat="itemButton in buttons", ng-click="itemButton.click(itemButton.id, currentItem)", ng-show="identity.isAuthorized(itemButton.auth)", ng-class="{active: itemButton.isCurrent(itemButton.id)}")
     a.link-alias(href="{{ itemButton.url }}") {{ itemButton.text }}
