--- a/public/app/common/templates/item-details.html
+++ b/public/app/common/templates/item-details.html
@@ -1,1 +1,1 @@
-<a href="{{ backUrl }}" class="btn btn-sm"><< Back to {{ backUrlText }}</a><h1 ng-class="cssClass" class="well text-center">{{ heading }}</h1><div class="btn-tabs"><button ng-repeat="itemButton in buttons" ng-click="itemButton.func(currentItem)" ng-show="identity.isAuthorized(itemButton.auth)" class="btn btn-default"><a href="{{ itemButton.url }}" class="link-alias black">{{ itemButton.text }}</a></button></div><hr/>
+<a href="{{ backUrl }}" class="btn btn-sm"><< Back to {{ backUrlText }}</a><h1 ng-class="cssClass" class="well text-center">{{ heading }}</h1><hr/>
