--- a/public/app/admin/product/product-add.jade
+++ b/public/app/admin/product/product-add.jade
@@ -1,4 +1,5 @@
 .container
+  button-tabs
   .well
     form.form-horizontal(name="productForm")
       fieldset
@@ -46,3 +47,4 @@
               button.btn.btn-primary(ng-click="addProduct()", ng-disabled="productForm.$invalid") Add Product
               | &nbsp;
               a.btn.btn-default(href="/screens/products/") Cancel
+
