--- a/public/css/site.css
+++ b/public/css/site.css
@@ -67,6 +67,9 @@ a.link-alias-white {
 .btn-tabs button:hover {
   background-color: #d4d4d4;
 }
+.non-tab {
+  margin-bottom: 20px;
+}
 .vertical-center {
   vertical-align: middle;
 }
