--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -59,7 +59,8 @@ a.link-alias-white
     background-color #eeeeee
   button:hover
     background-color #d4d4d4
-
+.non-tab
+  margin-bottom 20px
 .vertical-center
   vertical-align middle
 
