--- a/public/app/screens/inbound/new-purchase-order.jade
+++ b/public/app/screens/inbound/new-purchase-order.jade
@@ -42,7 +42,7 @@
 
   .overlay(ng-show="isAdding()")
     button.btn.btn-warning(ng-click="toggleIsAdding()") Close
-    .container.well.text-center
+    .overlay-container.well.text-center
       h1.inbound-header Pick a product
       hr
       ul
