--- a/public/app/screens/inbound/receiving.jade
+++ b/public/app/screens/inbound/receiving.jade
@@ -43,7 +43,7 @@
 
   .overlay(ng-show="isReceiving()")
     button.btn.btn-warning(ng-click="toggleIsReceiving()") Cancel
-    .container.well.text-center
+    .overlay-container.well.text-center
       .no-overflow
         form.form-horizontal(name="receiveToLoadForm")
           fieldset
