--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -73,7 +73,7 @@ a.link-alias-white
   margin-left 10px
 
 .container
-  width 80%
+  width 100%
 
 .content-container
   width 80%
@@ -187,8 +187,8 @@ $inventory-text-color = white
   position absolute
   top 25%
   button
-    margin-left 50%
-  .container
+    margin-left 35%
+  .overlay-container
     position relative
     border 2px solid black
     overflow auto
@@ -196,8 +196,7 @@ $inventory-text-color = white
     min-width 600px
     height 400px
     width 600px
-    margin-left 50%
-    margin-right 50%
+    margin-left 35%
   li
     list-style none
 
