--- a/server/includes/scripts.jade
+++ b/server/includes/scripts.jade
@@ -2,6 +2,7 @@ script(type="text/javascript", src="/vendor/jquery/dist/jquery.js")
 script(type="text/javascript", src="/vendor/angular/angular.js")
 script(type="text/javascript", src="/vendor/toastr/toastr.js")
 script(type="text/javascript", src="/vendor/bootstrap/dist/js/bootstrap.js")
+script(type="text/javascript", src="/vendor/bootstrap/js/modal.js")
 script(type="text/javascript", src="/vendor/angular-resource/angular-resource.js")
 script(type="text/javascript", src="/vendor/angular-route/angular-route.js")
 script(type="text/javascript", src="/vendor/alertify.js/dist/js/ngAlertify.js")
