--- a/public/app/account/profile.jade
+++ b/public/app/account/profile.jade
@@ -4,15 +4,15 @@
       fieldset
         legend User Profile
         .form-group
-          label.col-md-2.control-label(for="username") Username
+          label.col-md-2.control-label(for="username") Username *
           .col-md-10
             input.form-control(name="username", type="text", placeholder="Username", ng-model="username", required)
         .form-group
-          label.col-md-2.control-label(for="fname") First Name
+          label.col-md-2.control-label(for="fname") First Name *
           .col-md-10
             input.form-control(name="fname", type="text", placeholder="First Name", ng-model="fname", required)
         .form-group
-          label.col-md-2.control-label(for="lname") Last Name
+          label.col-md-2.control-label(for="lname") Last Name *
           .col-md-10
             input.form-control(name="lname", type="text", placeholder="Last Name", ng-model="lname", required)
         .form-group
