--- a/public/css/site.css
+++ b/public/css/site.css
@@ -244,3 +244,9 @@ a.link-alias-white {
   -moz-border-radius: 6px 0 6px 6px;
   border-radius: 6px 0 6px 6px;
 }
+.margin-right-15 {
+  margin-right: 15px;
+}
+.margin-right-30 {
+  margin-right: 30px;
+}
