--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -246,3 +246,8 @@ $inventory-text-color = white
     -moz-border-radius 6px 0 6px 6px
     border-radius 6px 0 6px 6px
 //end submenu
+
+.margin-right-15
+  margin-right 15px
+.margin-right-30
+  margin-right 30px
