edit/update inbound orders

--- a/public/app/screens/inbound/edit-purchase-order.jade
+++ b/public/app/screens/inbound/edit-purchase-order.jade
@@ -28,7 +28,7 @@
           td {{ product.price | currency}}
           td {{ product.manufacturer }}
           td
-            input(type="text", ng-model="quant", ng-change="recalculate(product, quant)", greater-than-zero, select-on-click, required)
+            input(type="text", ng-model="product.quantity", ng-change="recalculate(product, product.quantity)", greater-than-zero, select-on-click, required)
           td {{ product.totalPerLine | currency}}
 
   .form-group
